# lx-backup

./: .gitignore  README.md  flake.nix  pyproject.toml  result
scripts/: ignore-types.py
src/: app.py  auto_backup.py  backup_dialog.py  config_manager.py  folder_selection.py  main.py  main_window.py  restore_dialog.py  tray_icon.py
src/UIs/: FolderSelection.py  MainWindow.py
src/resources/UIs/: BackupingDialog.ui  FolderSelection.ui  MainWindow.ui
src/rosa_backup/: app.py  auto_backup.py  backup_dialog.py  config_manager.py  folder_selection.py  main.py  main_window.py  restore_dialog.py  tray_icon.py
src/rosa_backup/UIs/: BackupingDialog.py  FolderSelection.py  MainWindow.py
src/rosa_backup/resources/UIs/: FolderSelection.ui  MainWindow.ui
