[project]
name = "rosa-backup-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "human-readable>=2.0.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.33.1",
]

[tool.poe.tasks]
build.shell = """
pyside6-uic src/resources/UIs/MainWindow.ui -o src/UIs/MainWindow.py
pyside6-uic src/resources/UIs/BackupingDialog.ui -o src/UIs/BackupingDialog.py
pyside6-uic src/resources/UIs/FolderSelection.ui -o src/UIs/FolderSelection.py
python scripts/ignore-types.py src/UIs/MainWindow.py
python scripts/ignore-types.py src/UIs/BackupingDialog.py
python scripts/ignore-types.py src/UIs/FolderSelection.py
"""
start = "python3 -m src.rosa_backup"

[project.scripts]
rosa-backup = "rosa_backup"

[tool.poe.tasks.dev]
sequence = ["build", "start"]
ignore_fail = "return_zero"

[build-system]
requires = ["hatchling"]  # or "setuptools" if you're using setuptools
build-backend = "hatchling.build"  # or "setuptools.build_meta" for setuptools

[tool.hatch.build.targets.wheel]
packages = ["src/rosa_backup"]
